<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.SobreActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sobre_nome_projeto"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textSize="27dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/sobre_desenvolvido"
                    android:id="@+id/textView2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/sobre_ludus_lab"
                    android:id="@+id/textView3"
                    android:textStyle="bold"
                    android:textColor="@color/foreground_material_light" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sobre_desenvolvedores"
                android:id="@+id/textView4"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentStart="true"
                android:layout_marginTop="28dp"
                android:textStyle="bold"
                android:textColor="@color/foreground_material_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Antonio Arquelau\nJhone Mendonça\nLucas Almeida\nMatheus Sousa\nCael Fernando\nTainá Lima\nHeloisa Batista\nPaulo Rocha"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView4"
                android:layout_alignParentStart="true"
                android:textColor="@color/abc_secondary_text_material_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sobre_produtores"
                android:id="@+id/textView6"
                android:textStyle="bold"
                android:textColor="@color/foreground_material_light"
                android:layout_below="@+id/textView5"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Prof. Dr. Jucimar Junior\nProfa. Cristina Araújo"
                android:id="@+id/textView7"
                android:textColor="@color/abc_secondary_text_material_light"
                android:layout_below="@+id/textView6"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sobre_mestrando"
                android:id="@+id/textView8"
                android:textStyle="bold"
                android:textColor="@color/foreground_material_light"
                android:layout_below="@+id/textView7"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Raimundo Napoleão Artini Filho"
                android:id="@+id/textView9"
                android:layout_below="@+id/textView8"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sobre_consideracoes"
                android:id="@+id/textView10"
                android:layout_below="@+id/textView9"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/textView10"
                android:layout_alignParentStart="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:layout_gravity="left"
                    android:src="@drawable/logo_uea"
                    android:layout_weight="200" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:src="@drawable/logo_ludus_preto"
                    android:layout_weight="200"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
