<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cecece"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.Paciente.PacienteEditarActivity"
    tools:showIn="@layout/paciente_editar_activity"
    android:theme="@style/AppTheme.TextInputLayout">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_nome_paciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_nome_paciente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/paciente_nome">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/paciente_edt_nome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/paciente_responsavel"
                        android:textColor="@color/colorPrimary"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/paciente_txt_sem_responsavel"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/paciente_responsavel_aviso"
                            android:gravity="center"
                            android:layout_alignParentBottom="false"
                            android:layout_marginLeft="5dp" />
                        <Spinner
                            android:id="@+id/paciente_spn_responsavel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        </Spinner>
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_registro_paciente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/paciente_registro_unidade">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/paciente_edt_numero_registro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/paciente_data_nascimento"
                        android:textColor="@color/colorPrimary" />
                    <TextView
                        android:layout_margin="5dp"
                        android:inputType="date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/paciente_data_nascimento_exemplo"
                        android:id="@+id/paciente_tv_data_nascimento"
                        android:singleLine="true"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Peso (kg)"
                        android:textColor="@color/colorPrimary" />
                    <TextView
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:id="@+id/paciente_tv_peso"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_cartao_paciente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/paciente_cartao_nacionalsaude">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/paciente_edt_cartao_saude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_telefone_paciente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/paciente_telefone">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/paciente_edt_telefone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_endereco_paciente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/paciente_endereco">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/paciente_edt_endereco"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPostalAddress"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/paciente_tuberculose"
                        android:textColor="@color/colorPrimary"/>
                    <RadioGroup
                        android:id="@+id/paciente_rdg_tuberculose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/paciente_rdbtn_pulmonar"
                            android:text="@string/paciente_tuberculose_pulmonar"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />
                        <RadioButton
                            android:id="@+id/paciente_rdbtn_extrapulmonar"
                            android:text="@string/paciente_tuberculose_extrapulmonar"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />
                        <RadioButton
                            android:id="@+id/paciente_rdbtn_mista"
                            android:text="@string/paciente_tuberculose_mista"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />
                    </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
